@@ -37,7 +37,9 @@ CHANGES
     - Query.select_from(), from_statement() ensure
       that the given argument is a FromClause,
       or Text/Select/Union, respectively.
-      
+
+    - first() works as expected with Query.from_statement().
+    
     - Fixed bug introduced in 0.5rc4 involving eager 
       loading not functioning for properties which were
       added to a mapper post-compile using 
